<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/rootMain"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@color/background_dark">



    <!-- Basic background -->

    <ImageView

        android:id="@+id/bgImage"

        android:layout_width="0dp"

        android:layout_height="0dp"

        android:scaleType="centerCrop"

        android:contentDescription="@string/bg_desc"

        android:src="@drawable/bg_background"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent" />



    <!-- profile + coins -->

    <LinearLayout

        android:id="@+id/topBar"

        android:layout_width="0dp"

        android:layout_height="56dp"

        android:orientation="horizontal"

        android:paddingStart="12dp"

        android:paddingEnd="12dp"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        android:gravity="center_vertical">



        <!-- Profile -->

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:orientation="horizontal"

            android:gravity="center_vertical"

            android:padding="12dp"

            android:background="@drawable/background_main_bar_bg"

            android:layout_marginStart="12dp">



            <ImageView

                android:id="@+id/imgProfile"

                android:layout_width="36dp"

                android:layout_height="36dp"

                android:src="@drawable/profile_pic"

                android:contentDescription="@string/profile"

                android:scaleType="centerCrop"

                android:background="@drawable/profile_circle_bg"

                android:clipToOutline="true" />



            <TextView

                android:id="@+id/tvUsername"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"

                android:text="MAFGHOST"

                android:textColor="@color/white"

                android:textSize="16sp"

                android:textStyle="bold" />

        </LinearLayout>





        <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

        <!-- coins area-->

        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:orientation="horizontal"

            android:gravity="center_vertical"

            android:padding="12dp"

            android:background="@drawable/background_main_bar_bg">



            <ImageView

                android:id="@+id/icCoins"

                android:layout_width="28dp"

                android:layout_height="28dp"

                android:src="@drawable/ic_coins"

                android:contentDescription="@string/coins"

                app:tint="@color/white" />



            <TextView

                android:id="@+id/tvCoins"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text=""

                android:layout_marginStart="6dp"

                android:textColor="@color/white"

                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>



    <!-- Central card showing image main -->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRoom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        android:layout_margin="16dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/card_overlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgRoomBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/current_room_bg"
                android:src="@drawable/bg_gym" />

            <View
                android:id="@+id/timerOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/btnChangeRoom"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_change"
                android:background="@drawable/background_bottom_icon_bg"
                android:contentDescription="@string/change_room"
                android:padding="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMainTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="Timer"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:backgroundTint="#504073"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_start"
                app:iconTint="@color/white"
                android:elevation="6dp"/>

        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <!-- main bar -->

    <!-- Background of the main bar-->

    <LinearLayout

        android:id="@+id/bottomNav"

        android:layout_width="0dp"

        android:layout_height="88dp"

        android:orientation="horizontal"

        android:gravity="center"

        android:padding="8dp"

        android:background="@drawable/background_main_bar_bg"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintBottom_toBottomOf="parent">



        <!-- icon shop -->

        <ImageButton

            android:id="@+id/btnShop"

            android:layout_width="56dp"

            android:layout_height="56dp"

            android:src="@drawable/ic_shop1"

            android:background="@drawable/background_bottom_icon_bg"

            app:tint="@color/white"

            android:contentDescription="@string/shop"/>



        <!-- icon co_op-->

        <ImageButton

            android:id="@+id/btnInvite"

            android:layout_width="56dp"

            android:layout_height="56dp"

            android:src="@drawable/ic_co_op1"

            android:layout_marginStart="12dp"

            android:background="@drawable/background_bottom_icon_bg"

            android:contentDescription="@string/invite"/>



        <!-- icon home -->

        <ImageButton

            android:id="@+id/btnHomeStatus"

            android:layout_width="70dp"

            android:layout_height="70dp"

            android:src="@drawable/ic_home1"

            android:background="@drawable/background_bottom_icon_bg"

            android:layout_marginStart="12dp"

            android:layout_marginEnd="12dp"

            app:tint="@color/white"

            android:contentDescription="@string/home"/>







        <!-- icon Forms-->

        <ImageButton

            android:id="@+id/btnInventory"

            android:layout_width="56dp"

            android:layout_height="56dp"

            android:src="@drawable/ic_forms1"

            android:background="@drawable/background_bottom_icon_bg"

            android:contentDescription="@string/inventory"/>



        <!-- icon settings-->

        <ImageButton

            android:id="@+id/btnSettings"

            android:layout_width="56dp"

            android:layout_height="56dp"

            android:src="@drawable/ic_settings1"

            android:layout_marginStart="12dp"

            android:background="@drawable/background_bottom_icon_bg"

            android:contentDescription="@string/settings"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>